fix back arrow alignment

--- a/src/Umbraco.Web.UI.Client/src/less/components/umb-mini-list-view.less
+++ b/src/Umbraco.Web.UI.Client/src/less/components/umb-mini-list-view.less
@@ -17,10 +17,19 @@
     font-size: 11px;
     margin-right: 5px; 
     color: @gray;
+    display: flex;
+    align-items: center;
+}
+
+.umb-mini-list-view__back-icon {
+    margin-right: 4px;
+    height: 11px;
+    line-height: 11px;
 }
 
 .umb-mini-list-view__back-text {
     text-decoration: underline;
+    margin-right: 5px;
 }
 
 .umb-mini-list-view__back:hover {
